Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-20257

VirtualBox versions 3.1.0 - 4.0.24 and 4.3.0 - 4.3.12 can't start VM in ReactOS: Failed to load VMMR0 r0 (VERR_LDR_GENERAL_FAILURE)

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • 0.4.16
    • NTCore
    • None
    • ReactOS 0.4.16-dev-1402-gf7c36c6, VirtualBox 7.0.15 (of the host OS).

    Description

      Steps to reproduce:

      1. Download VirtualBox 4.3.12 here: https://download.virtualbox.org/virtualbox/4.3.12/VirtualBox-4.3.12-93733-Win.exe. It can be any other version from specified in the summary, but I'm testing this one to be more exact here.
      2. Install it by double click on downloaded exe installer and following all the steps till the end. Uncheck "Run now" checkbox at the end of the installation and click "Finish".
      3. Reboot ReactOS.
      4. Start VirtualBox Manager via the Desktop or Start Menu link.
      5. Create a VM with any settings you prefer.
      6. Try to start it.

      After the last step, it will show the following error:

      and the following outptu is visible in vbox.log when trying to start the VM:

      (ntoskrnl/ex/sysinfo.c:2367) NtSetSystemInformation - SystemLoadGdiDriverInSystemSpaceInformation not implemented
      VBoxDrv: rcNt=c0000002 '\??\C:\Program Files\Oracle\VirtualBox\VMMR0.r0' 

      which is an actual source of problem.
      According to the unofficial documentation for SYSTEM_GDI_DRIVER_INFORMATION structure: https://www.geoffchappell.com/studies/windows/km/ntoskrnl/api/ex/sysinfo/gdi_driver.htm, which is used by both SystemLoadGdiDriverInformation and SystemLoadGdiDriverInSystemSpaceInformation cases of NtSetSystemInformation(), these cases seem to do exactly the same thing. And there are no any unions inside that structure (according to the documentation), which means there are no any different cases of using it (e. g., no 1st member of union is for the 1st case, and 2nd is for the 2nd one appropriately).
      But we currently have only the first one implemented properly, but 2nd one is mared as not yet implemented. So I've just referred the 2nd case to the same implementation as the first one, and then everything works.
      Indeed. After implementing that code path, it does no longer fail and VM starts successfully.
      Will send a new PR soon.
      For the reference, newer VirtualBox versions (4.3.14+) are not starting VM correctly even after my changes. Hence, they are blocked by another bugs still.

      Attachments

        1. vbox.log
          48 kB
          Oleg Dubinskiy
        2. VirtualBox_ReactOS_27_06_2025_16_10_20.png
          75 kB
          Oleg Dubinskiy

        Issue Links

          Activity

            People

              Oleg Dubinskij Oleg Dubinskiy
              Oleg Dubinskij Oleg Dubinskiy
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: