[NTOS:EX] Implement NtSetSystemInformation().SystemLoadGdiDriverInSystemSpaceInformation Implement SystemLoadGdiDriverInSystemSpaceInformation case of NtSetSystemInformation() function. According to https://www.geoffchappell.com/studies/windows/km/ntoskrnl/api/ex/sysinfo/gdi_driver.htm, it seem to do the same thing as SystemLoadGdiDriverInformation (because these two cases have the same shared structure), so simply redirect SystemLoadGdiDriverInSystemSpaceInformation to SystemLoadGdiDriverInformation case, which we have already implemented. This fixes VM starting failure for VirtualBox 3.1.0 - 4.0.24 and 4.3.0 - 4.3.12 versions, so this proves my changes actually work correctly. Newer versions of VirtualBox still don't work because of another blocking bugs. CORE-20257